# genai-explorations

./: .gitignore  README.md  pyproject.toml
.github/: commit.instructions.md
notebooks/: creating_audiobooks_with_gemini_25_tts.ipynb  exploring_gemini_25_tts.ipynb  simple_conversational_agent.ipynb  simple_rag.ipynb
notebooks/llm_zoomcamp/: homework_1.ipynb
