[project]
name = "genai-explorations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "ebooklib>=0.19",
    "google-genai>=1.18.0",
    "jupyter>=1.1.1",
    "nb-clean>=4.0.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
]
