[project]
name = "genai-explorations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.12",
    "ebooklib>=0.19",
    "elasticsearch>=9.0.2",
    "google-genai>=1.18.0",
    "jupyter>=1.1.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.64",
    "langchain-openai>=0.3.21",
    "langchain-text-splitters>=0.3.8",
    "langgraph>=0.4.8",
    "langsmith>=0.3.45",
    "nb-clean>=4.0.1",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
]
